<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title"
    android:divider="@drawable/lines"

    >
<PreferenceCategory
    android:title="Filter Options"
    />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
    <ListPreference
        android:defaultValue="@string/settings_location_default"
        android:entries="@array/settings_location_by_labels"
        android:entryValues="@array/settings_location_by_values"
        android:key="@string/settings_location_key"
        android:title="@string/settings_location_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:maxLength="1"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_limit_key"
        android:selectAllOnFocus="true"
        android:maxLength="4"
        android:title="@string/settings_limit_label" />
    <PreferenceCategory
        android:title="Customisation"/>
    <ListPreference
        android:defaultValue="@string/settings_themes_default"
        android:entries="@array/settings_themes_by_labels"
        android:entryValues="@array/settings_themes_by_values"
        android:key="@string/settings_themes_key"
        android:title="@string/settings_themes_label" />

</PreferenceScreen>
